# Shear2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Shear2D.project  install.pike  shear2d.pike  update_repo.pike  version.pike
example/: CMakeLists.txt  LDPlans.txt  level0.c  level0.h  level1.c  level1.h  main.c
example/res/: l1-map.json
game_src/: game.c  game.json
include/shear/: command.h  renderer.h  scene.h  shear.h  state.h  util.h
lib/SDL2_image-2.0.3/: config.status  libtool
lib/SDL2_image-2.0.3/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
modules/console/: module.json
modules/gui/: module.json
modules/mapping/: module.json
modules/net/: module.json  net.c
modules/physics/: module.json
modules/platform/: module.json  module.pike  platform.c
modules/resources/: module.json  module.pike  resources.c
modules/scripting/: module.json
modules/sound/: module.json
src/: engine.c  events.h  module.c  module.h  render.h  renderer.c  scene.c  scenegraph.h  shear.c  shear.h  state.c  state.h  timer.h  types.h  util.c  util.h
